# infernet-container-starter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PUBLISHING.md  README.md  internal.mk  pyproject.toml  requirements.txt
.github/workflows/: docker_ci.yaml  python_ci.yaml
deploy/: docker-compose.yaml  fluent-bit.conf
projects/gpt4/: gpt4.md
projects/gpt4/container/: .gitignore  Dockerfile  Makefile  README.md  config.sample.json  requirements.txt
projects/gpt4/contracts/: Makefile  README.md  foundry.toml
projects/hello-world/: hello-world.md
projects/hello-world/container/: Dockerfile  Makefile  README.md  config.json  requirements.txt
projects/hello-world/contracts/: Makefile  README.md  Tutorial.md  remappings.txt
projects/onnx-iris/: onnx-iris.md
projects/onnx-iris/container/: Makefile  README.md  config.json
projects/onnx-iris/contracts/: README.md  remappings.txt
projects/payment/container/: config.json
projects/payment/contracts/: .gitignore  Makefile  README.md
projects/prompt-to-nft/: .gitignore  prompt-to-nft.md
projects/prompt-to-nft/container/: .gitignore  Dockerfile  Makefile  README.md  config.sample.json  prompt_to_nft.env.sample  requirements.txt
projects/prompt-to-nft/contracts/: remappings.txt
projects/prompt-to-nft/stablediffusion/: Dockerfile  Makefile  requirements.txt
projects/prompt-to-nft/ui/: Makefile  bun.lockb  package.json
projects/tgi-llm/: tgi-llm.md
projects/tgi-llm/container/: Dockerfile  Makefile  README.md  config.sample.json  (+2 more)
projects/torch-iris/: torch-iris.md
(+69 files in other folders)
